[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axion2to2"
version = "0.1.0"
description = "Python Package for Axion 2-to-2 Scattering"
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [
    "numpy>=2.2.6", "matplotlib>=3.10.8", "scipy>=1.15.3", "pip>=26.0.1", "tqdm>=4.67.3"
]

[tool.setuptools.packages.find]
where = ["src"]
